<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_t9_key_1"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_1"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_4"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingPrefix,UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_2"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_2"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_5"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_3"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_3"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_3"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_2"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_4"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_4"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_7"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_1"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_5"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_5"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_8"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_6"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_4"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_2"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_6"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_6"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_5"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_3"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_7"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_7"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_decimal"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_4"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_8"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_8"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_0"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_9"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_7"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_5"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_9"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_9"
        app:layout_constraintBottom_toTopOf="@+id/tv_t9_key_00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_8"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_6"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_decimal"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_decimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_7"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tv_t9_key_0"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        android:text="@string/keyboard_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_t9_key_00"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_decimal"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_8"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/tv_t9_key_00"
        style="@style/TextAppearance.PayBillManager.CalculatorPad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_t9_key_0"
        app:layout_constraintTop_toBottomOf="@+id/tv_t9_key_9"
        tools:ignore="UnusedAttribute" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/colorPrimaryDark"
        app:elevation="0dp"
        app:layout_behavior="com.thomaskioko.paybillmanager.mobile.ui.view.ScrollAwareFABBehavior"
        app:layout_constraintBottom_toBottomOf="@+id/tv_t9_key_00"
        app:layout_constraintEnd_toEndOf="@+id/tv_t9_key_00"
        app:layout_constraintStart_toStartOf="@+id/tv_t9_key_00"
        app:layout_constraintTop_toTopOf="@+id/tv_t9_key_00"
        app:srcCompat="@drawable/ic_navigate_next_24dp"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>