<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="@drawable/selectable_item_background"
    android:orientation="horizontal"
    tools:targetApi="m">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_date_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="start"
        android:textColor="@color/error"

        android:textSize="@dimen/text_size_xxl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/text_bill_data" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_month_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_date_view"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="start"
        android:textColor="@color/error"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_date_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_view"
        tools:text="@string/text_bill_month" />

    <ImageView
        android:id="@+id/iv_color_indicator"
        android:layout_width="@dimen/spacing_middle"
        android:layout_height="@dimen/spacing_middle"
        android:layout_marginStart="16dp"
        android:contentDescription="@null"
        android:tint="@color/error"
        app:layout_constraintStart_toEndOf="@+id/tv_date_view"
        app:layout_constraintTop_toTopOf="@+id/tv_date_view"
        app:srcCompat="@drawable/shape_round_solid" />

    <View
        android:id="@+id/view5"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:background="@color/grey_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_color_indicator"
        app:layout_constraintStart_toStartOf="@+id/iv_color_indicator"
        app:layout_constraintTop_toBottomOf="@+id/iv_color_indicator" />


    <TextView
        android:id="@+id/tv_bill_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:textColor="@color/overlay_dark_80"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_color_indicator"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/text_bill_title" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/spacing_medium"
        android:text="@string/text_bill_number"
        android:textColor="@color/grey_60"
        app:layout_constraintStart_toStartOf="@+id/tv_bill_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_bill_name" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/spacing_medium"
        android:textColor="@color/grey_60"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/text_bill_amount" />


</androidx.constraintlayout.widget.ConstraintLayout>

